--- a/callimachus.conf
+++ b/callimachus.conf
@@ -16,7 +16,7 @@ PORT=8080
 # This value should contain the scheme, host name and port number (if not port 80 or 443).
 # This is the part of the URL before the path.
 # Cannot be changed once the setup script is run
-ORIGIN=http://192.168.99.100:8080
+ORIGIN=http://localhost:8080
 
 # Mail service configuration
 # This file should include a "mail.password" entry (if needed)
